--- a/App_LocalResources/default.aspx.zh.resx
+++ b/App_LocalResources/default.aspx.zh.resx
@@ -117,10 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Color" xml:space="preserve">
-    <value>LightGreen</value>
+  <data name="Button1" xml:space="preserve">
+    <value>提交</value>
   </data>
-  <data name="Welcome" xml:space="preserve">
-    <value>Bienvenue</value>
+  <data name="Female.text" xml:space="preserve">
+    <value>女</value>
+  </data>
+  <data name="gender.text" xml:space="preserve">
+    <value>我是</value>
+  </data>
+  <data name="Graduate.text" xml:space="preserve">
+    <value>我打算在毕业</value>
+  </data>
+  <data name="labelmn.text" xml:space="preserve">
+    <value>我的名字是</value>
+  </data>
+  <data name="lblsalary.text" xml:space="preserve">
+    <value>当我毕业了，我希望赚</value>
+  </data>
+  <data name="Male.text" xml:space="preserve">
+    <value>男</value>
+  </data>
+  <data name="label1.text" xml:space="preserve">
+    <value>你好!</value>
+  </data>
+  <data name="Label10.text" xml:space="preserve">
+    <value>女士</value>
+  </data>
+  <data name="Label6.text" xml:space="preserve">
+    <value>先生</value>
+  </data>
+  <data name="label7.text" xml:space="preserve">
+    <value>我祝愿你在你的职业生涯，毕业后。我希望你赚</value>
+  </data>
+  <data name="label8.text" xml:space="preserve">
+    <value>在你的第一份工作的薪水！</value>
   </data>
 </root>
